# Metric-Depth-to-Volumetric-Twin

./: .gitignore  PHASE2_SCOPE.md  README.md  pyproject.toml  requirements.txt
eval/: PHASE1_RESULTS.md  TRACK1_RESULTS.md  TRACK2_RESULTS.md  TRACK4_RESULTS.md  detection_yolobase.csv  detection_yoloopt.csv  monocular3d_baseline.csv  monocular3d_from_detector.csv  monocular3d_sweep.csv  track1_sweep.csv  track1_temporal.csv  track2_issia.csv  track4_soccernet.csv  track4_uncertainty.csv
scripts/: build_yolo_testset.py  download_test_frames.py  eval_detection.py  eval_monocular3d.py  eval_monocular3d_detector.py  eval_track1_temporal.py  eval_track2_issia.py  eval_track4_uncertainty.py  extract_temporal_windows.py  sweep_monocular3d.py  sweep_track1_temporal.py
src/v3d/: __init__.py  calibration.py  download.py  geometry.py  issia.py  labels.py  metrics.py  parsing.py  snv3d.py  temporal.py  trajectory.py  uncertainty.py
tests/: test_geometry.py  test_phase0.py  test_temporal.py  test_trajectory.py  test_uncertainty.py
